# segue

./: .gitattributes  .gitignore  LICENSE  README.md  pubspec.yaml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/database/: database.dart  tables.dart  track_dao.dart
lib/model/: album.dart  analysis_sheet_state.dart  analysis_tab.dart  library_state.dart  music_player_state.dart  player_sheet_state.dart  player_state.dart
lib/providers/: analysis_sheet_controller_provider.dart  audio_handler_provider.dart  database_provider.dart  player_sheet_controller_provider.dart  position_provider.dart  seeking_position_provider.dart  spectrum_provider.dart  stereo_peak_provider.dart  waveform_provider.dart
lib/usecase/: library_scan.dart
lib/view/: analysis_screen.dart  library_screen.dart  main_screen.dart  player_screen.dart
linux/: CMakeLists.txt
native/: CMakeLists.txt
native/include/essentia/: version.h
native/include/libavutil/: ffversion.h
native/scripts/: build_essentia_android.sh  build_native_android.sh
native/src/: audio_decode.cpp  audio_decode.h  essentia_bridge.cpp  essentia_bridge.h  essentia_lock.h  spectrum_analyzer.cpp  spectrum_analyzer.h  style_classifier.cpp  style_classifier.h
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: audio_analysis.rs  mod.rs
rust_builder/: pubspec.yaml
scripts/: download_model.sh
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+46 files in other folders)
