[package]
name = "rust_lib_segue"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.101"
flutter_rust_bridge = "=2.11.1"
stratum-dsp = "1.0.0"
symphonia = { version = "0.5.5", features = ["all"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
